# Projeto-ED1

./: .gitignore  ranking.c
arquivos_aleatorios/: buscaPersonagem.c  rank  ranking.c  teste.c
projeto_jogo/: CMakeLists.txt
projeto_jogo/projeto_allegro/: BaR.sh  CMakeLists.txt  Jogo
projeto_jogo/projeto_allegro/imagens/imgsJonSnow/: BaRjs.sh  JonSnow  jon_snow_teste.c
projeto_jogo/projeto_allegro/src/: baseSprites.c  game.c
projeto_jogo/projeto_allegro/src/funcoes/: funcoes_anim.c  funcoes_anim.h  funcoes_basicas_init.c  funcoes_basicas_init.h  funcoes_colisao.c  funcoes_colisao.h  funcoes_estruturas.c  funcoes_estruturas.h  funcoes_ranking.c  funcoes_ranking.h  rank
